[package]
name = "rust-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmer = {version = "3.1.1"}
serde = { version = "1", features = ["derive"] }
anyhow = "1.0.70"
actix-web = "4.3.1"
actix-web-actors = "4.2.0"
actix = "0.13.0"
serde_json = "1.0.95"
base64 = "0.21.0"
